ghost/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: myblog
  namespace: blog
  labels:
    app: myblog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myblog
  template:
    metadata:
      labels:
        app: myblog
    spec:
      containers:
      - name: myblog
        image: ghost:2.6-alpine
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /var/lib/ghost/content
          name: content
      volumes:
      - name: content
        persistentVolumeClaim:
          claimName: blog-content
        ports:
        - containerPort: 2368
