ghost/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-for-myblog
  namespace: blog
spec:
  type: LoadBalancer
  selector:
    app: myblog
  ports:
  - protocol: TCP
    port: 80
    targetPort: 2368
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myblog
  name: myblog
  namespace: blog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myblog
  template:
    metadata:
      labels:
        app: myblog
    spec:
      containers:
        - image: 'ghost:2.6-alpine'
          imagePullPolicy: Always
          name: myblog
          volumeMounts:
            - mountPath: /var/lib/ghost/content
              name: content
      volumes:
        - env:
            - name: url
              value: 'http://.com'
          name: content
          persistentVolumeClaim:
            claimName: blog-content
          ports:
            - containerPort: 2368
