ghost/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: myblog-route
  namespace: blog
spec:
  path: /
  to:
    kind: Service
    name: svc-for-myblog
  port:
    targetPort: 2368
